# drawing2story-ui

./: .flake8  .gitignore  README.md  pyproject.toml
documents/whitepaper/: expose.preambel.tex  expose.tex
documents/whitepaper/literatur/: refs.bib
drawing2story_ui/: app.py  utils.py
drawing2story_ui/static/: style.css  typing_text_style.css
drawing2story_ui/templates/: base.html  buttons.html  confirmation.html  leave.html  start.html  transcription.html  upload.html  welcome.html
drawing2story_ui/voice_interface/: hello.py  sentiment_analysis_with_heuristic.py  speech_to_text.py  tts_with_pyttsx3.py
tests/voice_interface/: test_hello.py  test_sentiment_analysis_with_heuristic.py  test_tts_with_pyttsx3.py
